--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ filter: brightness(0%);
 
 
 div.outerContainer {
-  background-color: rebeccapurple;
+  /* background-color: rebeccapurple; */
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 3fr .7fr;
@@ -58,7 +58,7 @@ div.outerContainer {
 }
 
 div.mainStage {
-  background-color: #61dafb;
+  /* background-color: #61dafb; */
   grid-area: "mainStage";
 }
 
@@ -69,13 +69,13 @@ div.mainStage {
 
 .sidebar {
   grid-area: "sidebar";
-  background-color: maroon;
+  /* background-color: maroon; */
 }
 
 /* Silhouette game title */
 .main {
   grid-area: "main";
-  background-color: cadetblue;
+  /* background-color: cadetblue; */
 }
 
 h1 {
